Updated README.md for the new changes